--- a/mkurl.html
+++ b/mkurl.html
@@ -25,7 +25,7 @@
 			<textarea class="textArea" id="head" placeholder="headを入力してください"></textarea><br>
 			<textarea class="textArea" id="body" placeholder="bodyを入力してください"></textarea>
 		</form>
-		<button id="button1">ボタン</button>
+		<button id="button1">生成</button>
 		<a class="result">test</a>
 	</div>
 </body>
